--- a/index.html
+++ b/index.html
@@ -1,131 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PredictorPro Penalty</title>
-<style>
-    body {
-        background-color: #000;
-        font-family: Arial, sans-serif;
-        color: #fff;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        margin: 0;
-    }
-
-    .logo {
-        width: 150px;
-        height: 150px;
-        background-color: #fff;
-        border-radius: 50%;
-        margin-bottom: 20px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: #000;
-        font-weight: bold;
-        font-size: 20px;
-    }
-
-    .multiplier-bar {
-        display: flex;
-        justify-content: space-between;
-        width: 300px;
-        margin-bottom: 20px;
-    }
-
-    .multiplier-bar div {
-        width: 10px;
-        height: 10px;
-        background-color: #555;
-        border-radius: 50%;
-    }
-
-    .goal {
-        width: 350px;
-        height: 200px;
-        border: 2px solid #00ff00;
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        gap: 5px;
-        padding: 10px;
-        background-color: #111;
-    }
-
-    .ball {
-        width: 50px;
-        height: 50px;
-        background-image: url('https://upload.wikimedia.org/wikipedia/commons/d/d3/Soccerball.svg');
-        background-size: cover;
-        cursor: pointer;
-        transition: transform 0.2s;
-    }
-
-    .ball.highlight {
-        transform: scale(1.2);
-        border: 2px solid yellow;
-        border-radius: 50%;
-    }
-
-    .button-container {
-        margin-top: 20px;
-    }
-
-    button {
-        padding: 10px 20px;
-        font-size: 18px;
-        cursor: pointer;
-        background-color: #00ff00;
-        color: #000;
-        border: none;
-        border-radius: 5px;
-    }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PredictorPro Penalty</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<div class="logo">PredictorPro</div>
-
-<div class="multiplier-bar">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-</div>
-
-<div class="goal" id="goal">
-    <!-- Сюда будут вставлены мячи через JS -->
-</div>
-
-<div class="button-container">
-    <button onclick="highlightTarget()">Показать куда бить</button>
-</div>
-
-<script>
-    const goal = document.getElementById('goal');
-
-    // Создаем мячи
-    for (let i = 0; i < 15; i++) {
-        const ball = document.createElement('div');
-        ball.classList.add('ball');
-        goal.appendChild(ball);
-    }
-
-    // Функция для подсветки случайного мяча
-    function highlightTarget() {
-        const balls = document.querySelectorAll('.ball');
-        balls.forEach(ball => ball.classList.remove('highlight'));
-
-        const randomIndex = Math.floor(Math.random() * balls.length);
-        balls[randomIndex].classList.add('highlight');
-    }
-</script>
-
+    <div class="main-container">
+        <div class="header">
+            <div class="logo-container">
+                <img src="https://i.ibb.co/L5122fD/logo.png" alt="PredictorPro Logo" class="logo">
+            </div>
+            <div class="sound-control">
+                <img src="https://i.ibb.co/h9r2Y9k/sound-icon.png" alt="Sound" class="sound-icon">
+            </div>
+        </div>
+        <div class="multiplier-line-dots">
+            <span class="dot active"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </div>
+        <div class="multipliers-list">
+            <span class="multiplier" data-value="2">x2</span>
+            <span class="multiplier" data-value="4">x4</span>
+            <span class="multiplier" data-value="12">x12</span>
+            <span class="multiplier" data-value="20">x20</span>
+            <span class="multiplier" data-value="32">x32</span>
+        </div>
+        <div class="goal-container">
+            <div class="goal-posts"></div>
+            <div class="goal-net"></div>
+            <div class="balls-grid">
+                <div class="ball-spot" data-id="1"></div>
+                <div class="ball-spot" data-id="2"></div>
+                <div class="ball-spot" data-id="3"></div>
+                <div class="ball-spot" data-id="4"></div>
+                <div class="ball-spot" data-id="5"></div>
+                <div class="ball-spot" data-id="6"></div>
+                <div class="ball-spot" data-id="7"></div>
+                <div class="ball-spot" data-id="8"></div>
+                <div class="ball-spot" data-id="9"></div>
+                <div class="ball-spot" data-id="10"></div>
+                <div class="ball-spot" data-id="11"></div>
+                <div class="ball-spot" data-id="12"></div>
+                <div class="ball-spot" data-id="13"></div>
+                <div class="ball-spot" data-id="14"></div>
+                <div class="ball-spot" data-id="15"></div>
+            </div>
+        </div>
+        <div class="controls-container">
+            <button id="get-signal-button">Получить сигнал</button>
+            <button id="reset-button">
+                <img src="https://i.ibb.co/Wc6Yp7N/reset-icon.png" alt="Reset">
+            </button>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
