--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="main-container">
         <div class="header">
             <div class="logo-container">
-                <img src="https://i.ibb.co/L5122fD/logo.png" alt="PredictorPro Logo" class="logo">
+                <img src="https://i.ibb.co/680t1h9/logo.png" alt="PredictorPro Logo" class="logo">
+                <p class="logo-text">PredictorPRO</p>
             </div>
             <div class="sound-control">
                 <img src="https://i.ibb.co/h9r2Y9k/sound-icon.png" alt="Sound" class="sound-icon">
@@ -57,6 +58,10 @@
                 <img src="https://i.ibb.co/Wc6Yp7N/reset-icon.png" alt="Reset">
             </button>
         </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
     </div>
     <script src="script.js"></script>
 </body>
