--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <div class="main-container">
         <div class="header">
             <div class="logo-container">
-                <img src="https://i.ibb.co/680t1h9/logo.png" alt="PredictorPro Logo" class="logo"> <p class="logo-text">PredictorPRO</p>
+                <img src="https://i.ibb.co/680t1h9/logo.png" alt="PredictorPro Logo" class="logo">
+                <p class="logo-text">PredictorPRO</p>
             </div>
             <div class="sound-control">
                 <img src="https://i.ibb.co/h9r2Y9k/sound-icon.png" alt="Sound" class="sound-icon">
@@ -52,8 +53,10 @@
             </div>
         </div>
         <div class="controls-container">
-            <button id="get-signal-button">احصل على الإشارة</button> <button id="reset-button">
-                <img src="https://i.ibb.co/zX74VzL/reset-arabic.png" alt="Reset"> </button>
+            <button id="get-signal-button">احصل على الإشارة</button>
+            <button id="reset-button">
+                <img src="https://i.ibb.co/zX74VzL/reset-arabic.png" alt="Reset">
+            </button>
         </div>
     </div>
     <script src="script.js"></script>
