--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
     <div class="main-container">
         <div class="header">
             <div class="logo-container">
-                <img src="https://i.ibb.co/680t1h9/logo.png" alt="PredictorPro Logo" class="logo">
-                <p class="logo-text">PredictorPRO</p>
+                <img src="eee.jpg" alt="PredictorPro Logo" class="logo"> <p class="logo-text">PredictorPRO</p>
             </div>
             <div class="sound-control">
-                <img src="https://i.ibb.co/h9r2Y9k/sound-icon.png" alt="Sound" class="sound-icon">
-            </div>
+                <img src="https://i.ibb.co/h9r2Y9k/sound-icon.png" alt="Sound" class="sound-icon"> </div>
         </div>
         <div class="multiplier-line-dots">
             <span class="dot active"></span>
@@ -55,9 +53,12 @@
         <div class="controls-container">
             <button id="get-signal-button">احصل على الإشارة</button>
             <button id="reset-button">
-                <img src="https://i.ibb.co/zX74VzL/reset-arabic.png" alt="Reset">
-            </button>
+                <img src="reset_icon.png" alt="Reset"> </button>
         </div>
+    </div>
+    <script src="script.js"></script>
+</body>
+</html>
     </div>
     <script src="script.js"></script>
 </body>
