--- a/index.html
+++ b/index.html
@@ -1,65 +1,74 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PredictorPro Penalty</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>PredictorPro</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background-color: #000;
+      color: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      text-align: center;
+    }
+
+    h1 {
+      font-size: 3em;
+      margin-bottom: 20px;
+      color: #00ffcc;
+      text-transform: uppercase;
+    }
+
+    p {
+      font-size: 1.2em;
+      margin-bottom: 30px;
+      color: #ccc;
+      max-width: 600px;
+    }
+
+    button {
+      padding: 15px 40px;
+      font-size: 1.2em;
+      background: linear-gradient(90deg, #00ffcc, #0066ff);
+      border: none;
+      border-radius: 30px;
+      color: #fff;
+      cursor: pointer;
+      transition: transform 0.2s, opacity 0.3s;
+    }
+
+    button:hover {
+      transform: scale(1.05);
+      opacity: 0.9;
+    }
+
+    footer {
+      position: absolute;
+      bottom: 20px;
+      font-size: 0.9em;
+      color: #666;
+    }
+  </style>
 </head>
 <body>
-    <div class="main-container">
-        <div class="header">
-            <div class="logo-container">
-                <img src="eee.jpg" alt="PredictorPro Logo" class="logo"> <p class="logo-text">PredictorPRO</p>
-            </div>
-            <div class="sound-control">
-                <img src="https://i.ibb.co/h9r2Y9k/sound-icon.png" alt="Sound" class="sound-icon"> </div>
-        </div>
-        <div class="multiplier-line-dots">
-            <span class="dot active"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-        </div>
-        <div class="multipliers-list">
-            <span class="multiplier" data-value="2">x2</span>
-            <span class="multiplier" data-value="4">x4</span>
-            <span class="multiplier" data-value="12">x12</span>
-            <span class="multiplier" data-value="20">x20</span>
-            <span class="multiplier" data-value="32">x32</span>
-        </div>
-        <div class="goal-container">
-            <div class="goal-posts"></div>
-            <div class="goal-net"></div>
-            <div class="balls-grid">
-                <div class="ball-spot" data-id="1"></div>
-                <div class="ball-spot" data-id="2"></div>
-                <div class="ball-spot" data-id="3"></div>
-                <div class="ball-spot" data-id="4"></div>
-                <div class="ball-spot" data-id="5"></div>
-                <div class="ball-spot" data-id="6"></div>
-                <div class="ball-spot" data-id="7"></div>
-                <div class="ball-spot" data-id="8"></div>
-                <div class="ball-spot" data-id="9"></div>
-                <div class="ball-spot" data-id="10"></div>
-                <div class="ball-spot" data-id="11"></div>
-                <div class="ball-spot" data-id="12"></div>
-                <div class="ball-spot" data-id="13"></div>
-                <div class="ball-spot" data-id="14"></div>
-                <div class="ball-spot" data-id="15"></div>
-            </div>
-        </div>
-        <div class="controls-container">
-            <button id="get-signal-button">احصل على الإشارة</button>
-            <button id="reset-button">
-                <img src="reset_icon.png" alt="Reset"> </button>
-        </div>
-    </div>
-    <script src="script.js"></script>
-</body>
-</html>
-    </div>
-    <script src="script.js"></script>
+  <h1>PredictorPro</h1>
+  <p>Эксклюзивный софт для точных сигналов ⚡<br>
+     Начни зарабатывать прямо сейчас вместе с нами 🚀</p>
+  <button onclick="startPredictor()">Запустить предиктор</button>
+
+  <footer>© 2025 PredictorPro</footer>
+
+  <script>
+    function startPredictor() {
+      alert("🔑 Введите свой ID Melbet, чтобы активировать PredictorPro!");
+    }
+  </script>
 </body>
 </html>
